--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,17 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,700);
 
-#ext_menu-15 .mbr-brand__name {
-  font-size: 16px;
-}
-#ext_menu-15.mbr-navbar--stuck .mbr-navbar__section {
-  background: #2c2c2c;
-}
-#ext_menu-15 .mbr-navbar__section {
-  background: #2c2c2c;
-}
-#ext_menu-15 .mbr-navbar__hamburger {
-  color: #ffffff;
-}
 #header3-3 H3 {
   text-align: center;
   font-family: 'PT Serif', serif;
@@ -69,4 +57,12 @@
 #header3-9 H3 {
   text-align: center;
   font-family: 'PT Serif', serif;
+}
+
+#header3-10 H3 {
+  text-align: center;
+  font-family: 'PT Serif', serif;
+}
+#buttons1-13 .btn {
+  font-size: 14px;
 }
