--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -66,3 +66,65 @@
   text-align: center;
   font-family: 'PT Serif', serif;
 }
+
+#ext_menu-13 .mbr-brand__name {
+  font-size: 16px;
+}
+#ext_menu-13.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#ext_menu-13 .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#ext_menu-13 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#header3-14 H3 {
+  text-align: center;
+  font-family: 'PT Serif', serif;
+}
+
+#ext_menu-17 .mbr-brand__name {
+  font-size: 16px;
+}
+#ext_menu-17.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#ext_menu-17 .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#ext_menu-17 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#header3-18 H3 {
+  text-align: center;
+  font-family: 'PT Serif', serif;
+}
+#header3-19 H3 {
+  text-align: left;
+}
+
+#ext_menu-20 .mbr-brand__name {
+  font-size: 16px;
+}
+#ext_menu-20.mbr-navbar--stuck .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#ext_menu-20 .mbr-navbar__section {
+  background: #2c2c2c;
+}
+#ext_menu-20 .mbr-navbar__hamburger {
+  color: #ffffff;
+}
+#header3-21 H3 {
+  text-align: center;
+  font-family: 'PT Serif', serif;
+}
+
+#header3-22 H3 {
+  text-align: center;
+  font-family: 'PT Serif', serif;
+}
+#buttons1-24 .btn {
+  font-size: 14px;
+}
